# Airway_Device_Base_Service

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  flight_plan.rs  spatial_query.rs
include/: airway_device_base_service.h
src/: encryption.rs  error.rs  ffi.rs  lib.rs
src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src/device/: fingerprint.rs  identity.rs  mod.rs  secure.rs
src/flight/: calculator.rs  mod.rs  planner.rs  validator.rs
src/models/: airport.rs  airspace.rs  airway.rs  mod.rs  navaid.rs  waypoint.rs
src/spatial/: geometry.rs  index.rs  mod.rs  query.rs
src/sync/: client.rs  mod.rs  strategy.rs
